// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fieldset > renders a match to the previous error snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="bf-usa-fieldset usa-fieldset required-field usa-input--error "
    required=""
  >
    <legend
      class="bf-legend usa-legend"
    >
      legend
      <span
        class="bf-usa-hint usa-hint usa-hint--required bf-usa-hint--required bf-required required"
        title="required"
      >
        (Required)
      </span>
    </legend>
    <div
      class="bf-error-detail"
    >
      Fill out the legend field
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Fieldset > renders a match to the previous snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="bf-usa-fieldset usa-fieldset   "
  >
    <legend
      class="bf-legend usa-legend"
    >
      Legend
      <span
        class="bf-usa-hint usa-hint usa-hint--required bf-usa-hint--required bf-required required"
        title="required"
      >
        (Required)
      </span>
    </legend>
    <div
      class="bf-hint"
    >
      hint
    </div>
  </fieldset>
</DocumentFragment>
`;
